--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "22.15.18",
+    "@types/react": "19.1.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.8.3"
   }
 }
